--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,30 @@
 *{
-    margin: 0;
+    margin: 0%;
 }
 .header{
     height: 100px;
-    background-color: crimson;
+    width: 100%;
+    background-color: aquamarine;
     text-align: center;
 }
-.nav{
-    height: 100px;
-    background-color: rgb(68, 57, 59);
-    text-align: center;
+.header h1{
+    color: black;
 }
 .content{
-
-    height: 400px;
+    height: 300px;
+    width: 100%;
+    background-color: rgb(26, 109, 81);
+    text-align: center;  
 }
-.left{
-    width: 60%;
-    float: left;
-
-}
-.section{
-    width:100% ;
-    height: 200px;
-    background-color: darkblue;
-    text-align: center;
-}
-.article{
-    width:100% ;
-    height: 200px;
-    background-color: rgb(102, 102, 207);
-    text-align: center;
-}
-.left{
-    overflow: hidden;
-}
-.right{
-    width: 40%;
-    float:right;
-
-   
-}
-.aside{
-    height: 400px;
-    background-color: darkgreen;text-align: center;
+.content h1{
+    color: brown;
 }
 .footer{
     height: 100px;
-    background-color: rgb(209, 160, 170);
+    width: 100%;
+    background-color: rgb(91, 43, 180);
     text-align: center;
+}
+.footer h1{
+    color: chartreuse;
 }
