--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,32 @@
 *{
+
     margin: 0%;
 }
-.header{
-    height: 100px;
-    width: 100%;
-    background-color: aquamarine;
+.menu{
+    width: 33.3%;
+    height: 600px;
+    background-color: aqua;
     text-align: center;
+    float: left;
 }
-.header h1{
-    color: black;
+.page{
+    overflow: hidden;
+    width: 66.6%;
+    float: right;
+
 }
-.content{
-    height: 300px;
-    width: 100%;
-    background-color: rgb(26, 109, 81);
-    text-align: center;  
-}
-.content h1{
-    color: brown;
+.header{
+    width: 66.6%;
+    height: 100px;
+    background-color: blue;
+    
+}.content{
+    width: 66.6%;
+    height: 400px;
+    background-color: cornflowerblue;
 }
 .footer{
+    width: 66.6%;
     height: 100px;
-    width: 100%;
-    background-color: rgb(91, 43, 180);
-    text-align: center;
-}
-.footer h1{
-    color: chartreuse;
+    background-color: darkgoldenrod;
 }
